Use LoggingTestContext
Signed-off-by: Matt Sicker <mattsicker@apache.org>